--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -57,7 +57,7 @@ $margin-promotion-sections-small: 15px;
   margin: $margin-promotion-sections 0;
 }
 
-.homepage-row .docs-svg-image{
+.homepage-row .wine-svg-image{
   max-width: 90%;
 }
 
