--- a/frontend/src/app/navbar/navbar.component.scss
+++ b/frontend/src/app/navbar/navbar.component.scss
@@ -15,17 +15,12 @@
   flex-grow: 1;
 }
 
-.docs-angular-logo {
+.nav-icon {
   height: 26px;
-  margin: 0 4px 3px 0;
+  margin: 0 0 3px 0;
   vertical-align: middle;
 }
 
-.docs-github-logo {
-  height: 21px;
-  margin: 0 7px 2px 0;
-  vertical-align: middle;
-}
 
 .navbar-link {
   text-decoration: inherit;
@@ -51,13 +46,22 @@
 
   .navbar-show-small {
     display: block;
+    //display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 0 16px;
+    //padding-left: 8px;
   }
 
   .navbar {
     display: flex;
   }
 
-  .docs-navbar--github-logo {
+  .navbar--github-logo {
     margin: 0;
   }
+  .nav-icon{
+    vertical-align: middle;
+  }
+
 }
